gen/MiParser.java
// Generated from C:/Users/Kathe/IdeaProjects/ANTLR-Project\MiParser.g4 by ANTLR 4.7
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MiParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, SUMA=2, SUMAS=3, RESTA=4, RESTAS=5, MULT=6, SLASH=7, PORC=8, IGUAL=9, 
		IGUALES=10, DIFERENTE=11, MAYOR=12, MAY_IGUAL=13, MENOR=14, MEN_IGUAL=15, 
		AND=16, OR=17, PYC=18, COMA=19, PUNTO=20, PARENT_ABIERTO=21, PARENT_CERRADO=22, 
		LLAVE_ABIERTA=23, LLAVE_CERRADA=24, CURLY_ABIERTO=25, CURLY_CERRADO=26, 
		LETTER=27, DIGIT=28, NUM=29, ID=30, PRINTABLECHAR=31, GUIONB=32, IDENT=33, 
		NUMBER=34, CHARCONST=35, CHAR=36, INT=37, FLOAT=38, BOOL=39, STRING=40, 
		IF=41, ELSE=42, BREAK=43, CLASS=44, CONST=45, NEW=46, READ=47, RETURN=48, 
		VOID=49, WHILE=50, WRITE=51, FOR=52, COMENTARIO=53, COMENTARIO2=54;
	public static final int
		RULE_program = 0, RULE_constDecl = 1, RULE_varDecl = 2, RULE_classDecl = 3, 
		RULE_methodDecl = 4, RULE_formPars = 5, RULE_type = 6, RULE_statement = 7, 
		RULE_block = 8, RULE_actPars = 9, RULE_condition = 10, RULE_condTerm = 11, 
		RULE_condFact = 12, RULE_expr = 13, RULE_term = 14, RULE_factor = 15, 
		RULE_designator = 16, RULE_relop = 17, RULE_addop = 18, RULE_mulop = 19;
	public static final String[] ruleNames = {
		"program", "constDecl", "varDecl", "classDecl", "methodDecl", "formPars", 
		"type", "statement", "block", "actPars", "condition", "condTerm", "condFact", 
		"expr", "term", "factor", "designator", "relop", "addop", "mulop"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, "'+'", "'++'", "'-'", "'--'", "'*'", "'/'", "'%'", "'='", 
		"'=='", "'!='", "'>'", "'>='", "'<'", "'<='", "'&&'", "'||'", "';'", "','", 
		"'.'", "'('", "')'", "'['", "']'", "'{'", "'}'", null, null, null, null, 
		null, "'_'", null, null, null, null, null, null, null, null, "'if'", "'else'", 
		"'break'", "'class'", "'const'", "'new'", "'read'", "'return'", "'void'", 
		"'while'", "'write'", "'for'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "WS", "SUMA", "SUMAS", "RESTA", "RESTAS", "MULT", "SLASH", "PORC", 
		"IGUAL", "IGUALES", "DIFERENTE", "MAYOR", "MAY_IGUAL", "MENOR", "MEN_IGUAL", 
		"AND", "OR", "PYC", "COMA", "PUNTO", "PARENT_ABIERTO", "PARENT_CERRADO", 
		"LLAVE_ABIERTA", "LLAVE_CERRADA", "CURLY_ABIERTO", "CURLY_CERRADO", "LETTER", 
		"DIGIT", "NUM", "ID", "PRINTABLECHAR", "GUIONB", "IDENT", "NUMBER", "CHARCONST", 
		"CHAR", "INT", "FLOAT", "BOOL", "STRING", "IF", "ELSE", "BREAK", "CLASS", 
		"CONST", "NEW", "READ", "RETURN", "VOID", "WHILE", "WRITE", "FOR", "COMENTARIO", 
		"COMENTARIO2"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(MiParser.CLASS, 0); }
		public TerminalNode IDENT() { return getToken(MiParser.IDENT, 0); }
		public TerminalNode CURLY_ABIERTO() { return getToken(MiParser.CURLY_ABIERTO, 0); }
		public TerminalNode CURLY_CERRADO() { return getToken(MiParser.CURLY_CERRADO, 0); }
		public List<ConstDeclContext> constDecl() {
			return getRuleContexts(ConstDeclContext.class);
		}
		public ConstDeclContext constDecl(int i) {
			return getRuleContext(ConstDeclContext.class,i);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public List<ClassDeclContext> classDecl() {
			return getRuleContexts(ClassDeclContext.class);
		}
		public ClassDeclContext classDecl(int i) {
			return getRuleContext(ClassDeclContext.class,i);
		}
		public List<MethodDeclContext> methodDecl() {
			return getRuleContexts(MethodDeclContext.class);
		}
		public MethodDeclContext methodDecl(int i) {
			return getRuleContext(MethodDeclContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiParserVisitor ) return ((MiParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(CLASS);
			setState(41);
			match(IDENT);
			setState(47);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IDENT) | (1L << CLASS) | (1L << CONST))) != 0)) {
				{
				setState(45);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONST:
					{
					setState(42);
					constDecl();
					}
					break;
				case IDENT:
					{
					setState(43);
					varDecl();
					}
					break;
				case CLASS:
					{
					setState(44);
					classDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(49);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(50);
			match(CURLY_ABIERTO);
			setState(54);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT || _la==VOID) {
				{
				{
				setState(51);
				methodDecl();
				}
				}
				setState(56);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(57);
			match(CURLY_CERRADO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstDeclContext extends ParserRuleContext {
		public TerminalNode CONST() { return getToken(MiParser.CONST, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IDENT() { return getToken(MiParser.IDENT, 0); }
		public TerminalNode IGUAL() { return getToken(MiParser.IGUAL, 0); }
		public TerminalNode PYC() { return getToken(MiParser.PYC, 0); }
		public TerminalNode NUMBER() { return getToken(MiParser.NUMBER, 0); }
		public TerminalNode CHARCONST() { return getToken(MiParser.CHARCONST, 0); }
		public ConstDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).enterConstDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).exitConstDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiParserVisitor ) return ((MiParserVisitor<? extends T>)visitor).visitConstDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstDeclContext constDecl() throws RecognitionException {
		ConstDeclContext _localctx = new ConstDeclContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_constDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(CONST);
			setState(60);
			type();
			setState(61);
			match(IDENT);
			setState(62);
			match(IGUAL);
			setState(63);
			_la = _input.LA(1);
			if ( !(_la==NUMBER || _la==CHARCONST) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(64);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> IDENT() { return getTokens(MiParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(MiParser.IDENT, i);
		}
		public TerminalNode PYC() { return getToken(MiParser.PYC, 0); }
		public List<TerminalNode> COMA() { return getTokens(MiParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(MiParser.COMA, i);
		}
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).enterVarDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).exitVarDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiParserVisitor ) return ((MiParserVisitor<? extends T>)visitor).visitVarDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			type();
			setState(67);
			match(IDENT);
			setState(72);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(68);
				match(COMA);
				setState(69);
				match(IDENT);
				}
				}
				setState(74);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(75);
			match(PYC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(MiParser.CLASS, 0); }
		public TerminalNode IDENT() { return getToken(MiParser.IDENT, 0); }
		public TerminalNode CURLY_ABIERTO() { return getToken(MiParser.CURLY_ABIERTO, 0); }
		public TerminalNode CURLY_CERRADO() { return getToken(MiParser.CURLY_CERRADO, 0); }
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public ClassDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).enterClassDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).exitClassDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiParserVisitor ) return ((MiParserVisitor<? extends T>)visitor).visitClassDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclContext classDecl() throws RecognitionException {
		ClassDeclContext _localctx = new ClassDeclContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(CLASS);
			setState(78);
			match(IDENT);
			setState(79);
			match(CURLY_ABIERTO);
			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(80);
				varDecl();
				}
				}
				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(86);
			match(CURLY_CERRADO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MethodDeclContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(MiParser.IDENT, 0); }
		public TerminalNode PARENT_ABIERTO() { return getToken(MiParser.PARENT_ABIERTO, 0); }
		public TerminalNode PARENT_CERRADO() { return getToken(MiParser.PARENT_CERRADO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode VOID() { return getToken(MiParser.VOID, 0); }
		public FormParsContext formPars() {
			return getRuleContext(FormParsContext.class,0);
		}
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public MethodDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_methodDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).enterMethodDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).exitMethodDecl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiParserVisitor ) return ((MiParserVisitor<? extends T>)visitor).visitMethodDecl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MethodDeclContext methodDecl() throws RecognitionException {
		MethodDeclContext _localctx = new MethodDeclContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_methodDecl);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENT:
				{
				setState(88);
				type();
				}
				break;
			case VOID:
				{
				setState(89);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(92);
			match(IDENT);
			setState(93);
			match(PARENT_ABIERTO);
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(94);
				formPars();
				}
			}

			setState(97);
			match(PARENT_CERRADO);
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENT) {
				{
				{
				setState(98);
				varDecl();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(104);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormParsContext extends ParserRuleContext {
		public List<TypeContext> type() {
			return getRuleContexts(TypeContext.class);
		}
		public TypeContext type(int i) {
			return getRuleContext(TypeContext.class,i);
		}
		public List<TerminalNode> IDENT() { return getTokens(MiParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(MiParser.IDENT, i);
		}
		public List<TerminalNode> COMA() { return getTokens(MiParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(MiParser.COMA, i);
		}
		public FormParsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_formPars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).enterFormPars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).exitFormPars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiParserVisitor ) return ((MiParserVisitor<? extends T>)visitor).visitFormPars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormParsContext formPars() throws RecognitionException {
		FormParsContext _localctx = new FormParsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_formPars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			type();
			setState(107);
			match(IDENT);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(108);
				match(COMA);
				setState(109);
				type();
				setState(110);
				match(IDENT);
				}
				}
				setState(116);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(MiParser.IDENT, 0); }
		public TerminalNode LLAVE_ABIERTA() { return getToken(MiParser.LLAVE_ABIERTA, 0); }
		public TerminalNode LLAVE_CERRADA() { return getToken(MiParser.LLAVE_CERRADA, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiParserVisitor ) return ((MiParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(117);
			match(IDENT);
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==LLAVE_ABIERTA) {
				{
				setState(118);
				match(LLAVE_ABIERTA);
				setState(119);
				match(LLAVE_CERRADA);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public DesignatorContext designator() {
			return getRuleContext(DesignatorContext.class,0);
		}
		public List<TerminalNode> PYC() { return getTokens(MiParser.PYC); }
		public TerminalNode PYC(int i) {
			return getToken(MiParser.PYC, i);
		}
		public TerminalNode IGUAL() { return getToken(MiParser.IGUAL, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode PARENT_ABIERTO() { return getToken(MiParser.PARENT_ABIERTO, 0); }
		public TerminalNode PARENT_CERRADO() { return getToken(MiParser.PARENT_CERRADO, 0); }
		public TerminalNode SUMAS() { return getToken(MiParser.SUMAS, 0); }
		public TerminalNode RESTAS() { return getToken(MiParser.RESTAS, 0); }
		public ActParsContext actPars() {
			return getRuleContext(ActParsContext.class,0);
		}
		public TerminalNode IF() { return getToken(MiParser.IF, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(MiParser.ELSE, 0); }
		public TerminalNode FOR() { return getToken(MiParser.FOR, 0); }
		public TerminalNode WHILE() { return getToken(MiParser.WHILE, 0); }
		public TerminalNode BREAK() { return getToken(MiParser.BREAK, 0); }
		public TerminalNode RETURN() { return getToken(MiParser.RETURN, 0); }
		public TerminalNode READ() { return getToken(MiParser.READ, 0); }
		public TerminalNode WRITE() { return getToken(MiParser.WRITE, 0); }
		public TerminalNode COMA() { return getToken(MiParser.COMA, 0); }
		public TerminalNode NUMBER() { return getToken(MiParser.NUMBER, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiParserListener ) ((MiParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiParserVisitor ) return ((MiParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_statement);
		int _la;
		try {
			setState(189);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENT:
				enterOuterAlt(_localctx, 1);
				{
				setState(122);
				designator();
				setState(132);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case IGUAL:
					{
					setState(123);
					match(IGUAL);
					setState(124);
					expr();
					}
					break;
				case PARENT_ABIERTO:
					{
					setState(125);
					match(PARENT_ABIERTO);
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RESTA) | (1L << PARENT_ABIERTO) | (1L << IDENT) | (1L << NUMBER) | (1L << CHARCONST) | (1L << BOOL) | (1L << NEW))) != 0)) {
						{
						setState(126);
						actPars();
						}
					}

					setState(129);
					match(PARENT_CERRADO);
					}
					break;
				case SUMAS:
					{
					setState(130);
					match(SUMAS);
					}
					break;
				case RESTAS:
					{
					setState(131);
					match(RESTAS);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(134);
				match(PYC);
				}
				break;
			case IF:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(IF);
				setState(137);
				match(PARENT_ABIERTO);
				setState(138);
				condition();
				setState(139);
				match(PARENT_CERRADO);
				setState(140);
				statement();
				setState(143);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
				case 1:
					{
					setState(141);
					match(ELSE);
					setState(142);
					statement();
					}
					break;
				}
				}
				break;
			case FOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(145);
				match(FOR);
				setState(146);
				match(PARENT_ABIERTO);
				setState(147);
				expr();
				setState(148);
				match(PYC);
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RESTA) | (1L << PARENT_ABIERTO) | (1L << IDENT) | (1L << NUMBER) | (1L << CHARCONST) | (1L << BOOL) | (1L << NEW))) != 0)) {
					{
					setState(149);
					condition();
					}
				}

				setState(152);
				match(PYC);
				setState(154);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(153);
					statement();
					}
					break;
				}
				setState(156);
				statement();
				}
				break;
			case WHILE:
				enterOuterAlt(_localctx, 4);
				{
				setState(158);
				match(WHILE);
				setState(159);
				match(PARENT_ABIERTO);
				setState(160);
				condition();
				setState(161);
				match(PARENT_CERRADO);
				setState(162);
				statement();
				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 5);
				{
				setState(164);
				match(BREAK);
				setState(165);
				match(PYC);
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 6);
				{
				setState(166);
				match(RETURN);
				setState(168);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RESTA) | (1L << PARENT_ABIERTO) | (1L << IDENT) | (1L << NUMBER) | (1L << CHARCONST) | (1L << BOOL) | (1L << NEW))) != 0)) {
					{
					setState(167);
					expr();
					}
				}

				setState(170);
				match(PYC);
				}
				break;
			case READ:
				enterOuterAlt(_localctx, 7);
				{
				setState(171);
				match(READ);
				setState(172);
				match(PARENT_ABIERTO);
				setState(173);
				designator();
				setState(174);
				match(PARENT_CERRADO);
				setState(175);
				match(PYC);
				}
				break;
			case WRITE:
				enterOuterAlt(_localctx, 8);
				{
				setState(177);
				match(WRITE);
				setState(178);
				match(PARENT_ABIERTO);
				setState(179);
				expr();
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMA) {
					{
					setState(180);
					match(COMA);
					setState(181);
					match(NUMBER);
					}
				}
